--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 flask==2.0.3
-torch==2.0.1
-transformers==4.30.0
+torch
+transformers==4.51.3
 pillow==9.5.0
+Werkzeug==2.0.3
+python-dotenv
+numpy<2
