--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-flask==2.0.3
-torch
-transformers==4.51.3
-pillow==9.5.0
-Werkzeug==2.0.3
-python-dotenv
-numpy<2
+# flask==2.0.3
+# torch
+# transformers==4.51.3
+# pillow==9.5.0
+# Werkzeug==2.0.3
+# python-dotenv
+# numpy<2
+flask>=2.0.3
+torch>=2.0.0
+transformers>=4.30.0
+pillow>=9.5.0
+Werkzeug>=2.0.3
+python-dotenv>=0.19.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+datasets>=2.12.0
